Bug 465330 - Checking some toolview checkboxes is not persistent
Summary: Checking some toolview checkboxes is not persistent
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-05 18:46 UTC by wojnilowicz
Modified: 2023-02-07 00:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wojnilowicz 2023-02-05 18:46:13 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1.  start Lokalize
2.  open a .po or .pot file
3.  click on e.g. "Settings->Toolviews->Translation Memory"
4.  quit Lokalize
5 . start Lokalize
6.  open a .po or .pot file
7.  open "Settings->Toolviews" menu

OBSERVED RESULT
"Translation Memory" entry is not checked.

EXPECTED RESULT
"Translation Memory" entry should be checked.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.26.5
KDE Frameworks Version: 5.102.0
Qt Version: 5.15.8

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-02-05 19:11:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/lokalize/-/merge_requests/29
Comment 2 wojnilowicz 2023-02-07 00:34:30 UTC
Git commit 63df3370019da68f3ee90ef30ea957d77e2455a0 by Łukasz Wojniłowicz.
Committed on 05/02/2023 at 19:09.
Pushed by aacid into branch 'master'.

Fall back to QDockWidget as an event handler

M  +1    -1    src/alttransview.cpp
M  +1    -1    src/mergemode/mergeview.cpp
M  +1    -1    src/tm/tmview.cpp

https://invent.kde.org/sdk/lokalize/commit/63df3370019da68f3ee90ef30ea957d77e2455a0
Comment 3 Albert Astals Cid 2023-02-07 00:43:44 UTC
Git commit acf5ff3ba33e46107d478aaa41b80c9fffe11db9 by Albert Astals Cid, on behalf of Łukasz Wojniłowicz.
Committed on 07/02/2023 at 00:43.
Pushed by aacid into branch 'release/22.12'.

Fall back to QDockWidget as an event handler
(cherry picked from commit 63df3370019da68f3ee90ef30ea957d77e2455a0)

M  +1    -1    src/alttransview.cpp
M  +1    -1    src/mergemode/mergeview.cpp
M  +1    -1    src/tm/tmview.cpp

https://invent.kde.org/sdk/lokalize/commit/acf5ff3ba33e46107d478aaa41b80c9fffe11db9