Fall back to QDockWidget as an event handler

BUG: 465330